--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,3 +12,10 @@ LineLength:
 
 FrozenStringLiteralComment:
   Enabled: false
+
+Metrics/BlockLength:
+  Exclude:
+    - spec/**/*.rb
+
+Rails/Blank:
+  Enabled: false
